# wasmi

./: Cargo.toml
crates/fuzzing/: Cargo.toml
crates/wasmi/src/: store.rs
crates/wasmi/src/engine/: config.rs
crates/wasmi/src/engine/executor/: instrs.rs
crates/wasmi/src/engine/executor/instrs/: binary.rs  comparison.rs  conversion.rs  unary.rs
crates/wasmi/src/engine/regmach/bytecode/: construct.rs  counts.rs  mod.rs  utils.rs
crates/wasmi/src/engine/regmach/executor/: instrs.rs  mod.rs
crates/wasmi/src/engine/regmach/executor/instrs/: binary.rs
crates/wasmi/src/engine/regmach/tests/op/: local_set.rs
crates/wasmi/src/engine/regmach/translator/: instr_encoder.rs  result_mut.rs  visit.rs  visit_register.rs
crates/wasmi/src/engine/regmach/translator/stack/: mod.rs  register_alloc.rs
crates/wasmi/src/engine/translator/: mod.rs  utils.rs
crates/wasmi/src/engine/translator/stack/: mod.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: translate.rs  translate_metered.rs
